--- a/menu_toggle.css
+++ b/menu_toggle.css
@@ -1,6 +1,6 @@
 /* BOTÓN HAMBURGUESA (ESCONDE EN DESKTOP) */
 .menu-toggle {
-  display: none; /* Oculto por defecto */
+  display: flex; /* Oculto por defecto */
   font-size: 2rem; /* Tamaño del ícono hamburguesa */
   background: none; /* Sin fondo */
   border: none; /* Sin bordes */
